# altara

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
app/: main.py
app/models/: __init__.py  device_list_model.py  device_model.py  port_list_model.py
app/protocols/: __init__.py  device_protocol.py  example_protocol.py
app/tools/: logger.py  paths.py  singleton.py
app/view_models/: __init__.py  device_view_model.py  example_view_model.py
app/views/: App.qml  qmldir
app/views/bases/: BaseButton.qml  BaseMenu.qml  BaseNotification.qml  BaseTextField.qml  BaseToolTip.qml  qmldir
app/views/device/: DeviceDialog.qml  DeviceItem.qml  DeviceList.qml  DevicePanel.qml  PortMenu.qml  qmldir
app/views/theme/: Color.qml  ColorSet.qml  Scheme.qml  Theme.qml  qmldir
tests/: test_tools.py
