[project]
name = "altara"
version = "0.1.0"
requires-python = ">=3.12"
description = "Automated logging, telemetry, and real-time analysis."
dependencies = [
    "pyclean>=3.1.0",
    "pyside6>=6.9.1",
    "ruff>=0.12.7",
    "tomlkit>=0.13.3",
]

[tool.ruff]
indent-width = 4
line-length = 110

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
